<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="eLoadSta2State" Id="{090e7a30-54b4-42c1-bf93-9ed26131b91a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eLoadSta2State :
( 
	eUnknown :=351,
    eInit,
	eHoming,
	eReady,
	eDwell,
	eWaitForLoadComplete,
	eProcessing,
	eDepart,
	eStopActive,
    eError
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>